--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -10,8 +10,6 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
@@ -21,7 +19,7 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <!-- Your app title -->
-    <title>My App</title>
+    <title>AddDick</title>
 
     <!-- This template defaults to the iOS CSS theme. To support both iOS and material design themes, see the Framework7 Tutorial at the link below:
         http://www.idangero.us/framework7/tutorials/maintain-both-ios-and-material-themes-in-single-app.html
@@ -42,7 +40,7 @@
     <!-- Left panel with reveal effect-->
     <div class="panel panel-left panel-reveal">
         <div class="content-block">
-            <p>Left panel content goes here</p>
+            <p>Нахуй ты ето открыл? </p>
         </div>
     </div>
 
@@ -54,7 +52,7 @@
             <div class="navbar">
                 <div class="navbar-inner">
                     <!-- We need cool sliding animation on title element, so we have additional "sliding" class -->
-                    <div class="center sliding">Awesome App</div>
+                    <div class="center sliding">Наше приложение</div>
                     <div class="right">
                         <!--
                           Right link contains only icon - additional "icon-only" class
@@ -73,7 +71,8 @@
                         <div class="content-block">
                             <p>Page content goes here</p>
                             <!-- Link to another page -->
-                            <a href="about.html">About app</a>
+                            <a href="about.html">About app</a><br>
+                            <a href="addik.html">Как я провел лето?</a>
                         </div>
                     </div>
                 </div>
