--- a/template_src/www/addik.html
+++ b/template_src/www/addik.html
@@ -25,12 +25,12 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="img/add.jpg" width="100%" alt=""></div>
         <div class="swiper-slide"><img src="img/badd.jpg" width="100%" alt=""><br><img src="img/gadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
-        <div class="swiper-slide"> <img src="img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
+        <div class="swiper-slide"> <img src="/img/tadd.jpg" width="100%" alt=""></div>
     </div>
 </div>
                 <p>Сам не помню!</p>
